// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client #click should resolve 1`] = `Object {}`;

exports[`Client #click should resolve if no tags are provided 1`] = `Object {}`;

exports[`Client #multiSearch should perform multi search 1`] = `
Array [
  ResultList {
    "info": Object {
      "meta": Object {
        "page": Object {
          "current": 1,
          "size": 1,
          "total_pages": 642,
          "total_results": 642,
        },
        "request_id": "5da20f6cc47205df9ddce06c6efb1a18",
        "warnings": Array [],
      },
    },
    "rawInfo": Object {
      "meta": Object {
        "page": Object {
          "current": 1,
          "size": 1,
          "total_pages": 642,
          "total_results": 642,
        },
        "request_id": "5da20f6cc47205df9ddce06c6efb1a18",
        "warnings": Array [],
      },
    },
    "rawResults": Array [
      Object {
        "_meta": Object {
          "score": 18.773478,
        },
        "created": Object {
          "raw": "2013-01-23T04:51:39.995Z",
        },
        "dependencies": Object {
          "raw": Array [
            "coffee-script",
            "argparse",
            "source-map",
          ],
        },
        "description": Object {
          "raw": "WIP cat for JS source maps.",
        },
        "id": Object {
          "raw": "source-map-cat",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": Array [
            "BSD",
          ],
        },
        "modified": Object {
          "raw": "2013-01-23T04:51:42.782Z",
        },
        "name": Object {
          "raw": "source-map-cat",
        },
        "owners": Object {
          "raw": Array [
            "gregg@aweber.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.0.0",
        },
      },
    ],
    "results": Array [
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 18.773478,
          },
          "created": Object {
            "raw": "2013-01-23T04:51:39.995Z",
          },
          "dependencies": Object {
            "raw": Array [
              "coffee-script",
              "argparse",
              "source-map",
            ],
          },
          "description": Object {
            "raw": "WIP cat for JS source maps.",
          },
          "id": Object {
            "raw": "source-map-cat",
          },
          "keywords": Object {
            "raw": null,
          },
          "license": Object {
            "raw": Array [
              "BSD",
            ],
          },
          "modified": Object {
            "raw": "2013-01-23T04:51:42.782Z",
          },
          "name": Object {
            "raw": "source-map-cat",
          },
          "owners": Object {
            "raw": Array [
              "gregg@aweber.com",
            ],
          },
          "repository": Object {
            "raw": null,
          },
          "version": Object {
            "raw": "0.0.0",
          },
        },
      },
    ],
  },
  ResultList {
    "info": Object {
      "meta": Object {
        "page": Object {
          "current": 1,
          "size": 10,
          "total_pages": 1,
          "total_results": 9,
        },
        "request_id": "5da20f6cc47205df9ddce06c6efb1a18",
        "warnings": Array [],
      },
    },
    "rawInfo": Object {
      "meta": Object {
        "page": Object {
          "current": 1,
          "size": 10,
          "total_pages": 1,
          "total_results": 9,
        },
        "request_id": "5da20f6cc47205df9ddce06c6efb1a18",
        "warnings": Array [],
      },
    },
    "rawResults": Array [
      Object {
        "_meta": Object {
          "score": 0.17133085,
        },
        "created": Object {
          "raw": "2012-10-09T01:10:48.905Z",
        },
        "dependencies": Object {
          "raw": Array [
            "request",
            "cheerio",
          ],
        },
        "description": Object {
          "raw": "Release some Bulldogs to watch internet for you",
        },
        "id": Object {
          "raw": "bulldog",
        },
        "keywords": Object {
          "raw": Array [
            "bulldog",
            "bulldogjs",
            "watcher",
            "web watcher",
            "site watcher",
          ],
        },
        "license": Object {
          "raw": Array [
            "MIT",
          ],
        },
        "modified": Object {
          "raw": "2012-10-09T01:10:56.277Z",
        },
        "name": Object {
          "raw": "bulldog",
        },
        "owners": Object {
          "raw": Array [
            "social@fernetjs.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/fernetjs/bulldogjs",
          ],
        },
        "version": Object {
          "raw": "0.1.0",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.09943935,
        },
        "created": Object {
          "raw": "2012-02-15T09:48:45.804Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "synchronize data between logic layer and persistence layer",
        },
        "id": Object {
          "raw": "Squirrel",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-02-15T09:48:53.668Z",
        },
        "name": Object {
          "raw": "Squirrel",
        },
        "owners": Object {
          "raw": Array [
            "dubodog@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/pomelo-modules/data-sync",
          ],
        },
        "version": Object {
          "raw": "0.0.1",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.082790785,
        },
        "created": Object {
          "raw": "2012-07-27T18:47:51.181Z",
        },
        "dependencies": Object {
          "raw": Array [
            "request",
            "node.extend",
          ],
        },
        "description": Object {
          "raw": "odata client for node.js",
        },
        "id": Object {
          "raw": "odata-cli",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-11-08T16:05:41.225Z",
        },
        "name": Object {
          "raw": "odata-cli",
        },
        "owners": Object {
          "raw": Array [
            "machadogj@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/machadogj/node-odata-cli",
          ],
        },
        "version": Object {
          "raw": "0.0.4",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.077640004,
        },
        "created": Object {
          "raw": "2013-01-10T20:10:30.401Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Winston transport based on mailer. It buffers errors, and packs them in one email if necessary.",
        },
        "id": Object {
          "raw": "winston-mailer",
        },
        "keywords": Object {
          "raw": Array [
            "winston",
            "email",
            "mail",
            "mailer",
          ],
        },
        "license": Object {
          "raw": Array [
            "BSD",
          ],
        },
        "modified": Object {
          "raw": "2013-01-10T20:10:32.828Z",
        },
        "name": Object {
          "raw": "winston-mailer",
        },
        "owners": Object {
          "raw": Array [
            "machadogj@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/machadogj/node-winston-mailer",
          ],
        },
        "version": Object {
          "raw": "0.0.1",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.077640004,
        },
        "created": Object {
          "raw": "2012-07-31T18:52:42.198Z",
        },
        "dependencies": Object {
          "raw": Array [
            "request",
            "odata-cli",
          ],
        },
        "description": Object {
          "raw": "node.js client for azure acs management service.",
        },
        "id": Object {
          "raw": "acs-cli",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-08-02T13:43:42.049Z",
        },
        "name": Object {
          "raw": "acs-cli",
        },
        "owners": Object {
          "raw": Array [
            "machadogj@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "{\\"type\\":\\"git\\",\\"url\\":\\"https://bitbucket.org/tellagostudios/node-acs-cli.git\\"}",
          ],
        },
        "version": Object {
          "raw": "0.0.1",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.077640004,
        },
        "created": Object {
          "raw": "2012-10-01T22:18:02.952Z",
        },
        "dependencies": Object {
          "raw": Array [
            "socket.io-client",
          ],
        },
        "description": Object {
          "raw": "Client package for console.io (https://github.com/TellagoDevLabs/node-console.io).",
        },
        "id": Object {
          "raw": "console.io-client",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-10-26T19:29:57.456Z",
        },
        "name": Object {
          "raw": "console.io-client",
        },
        "owners": Object {
          "raw": Array [
            "machadogj@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/TellagoDevLabs/node-console.io-client",
          ],
        },
        "version": Object {
          "raw": "0.0.4",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.06188738,
        },
        "created": Object {
          "raw": "2011-02-03T01:29:24.057Z",
        },
        "dependencies": Object {
          "raw": Array [
            "cradle",
          ],
        },
        "description": Object {
          "raw": "active record for CouchDB",
        },
        "homepage": Object {
          "raw": "https://github.com/scottburch/couch-ar",
        },
        "id": Object {
          "raw": "couch-ar",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-03-10T20:12:54.478Z",
        },
        "name": Object {
          "raw": "couch-ar",
        },
        "owners": Object {
          "raw": Array [
            "scott@bulldoginfo.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.3.4",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.05774788,
        },
        "created": Object {
          "raw": "2012-08-02T20:47:29.279Z",
        },
        "dependencies": Object {
          "raw": Array [
            "watch",
            "mkdirp",
          ],
        },
        "description": Object {
          "raw": "Checkout http://github/gekitz/jalapeno for further details",
        },
        "id": Object {
          "raw": "jalapeno",
        },
        "keywords": Object {
          "raw": Array [
            "jalapeno",
            "watchdog",
            "file copy",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-08-02T20:47:31.161Z",
        },
        "name": Object {
          "raw": "jalapeno",
        },
        "owners": Object {
          "raw": Array [
            "georgkitz@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/gekitz/jalapeno",
          ],
        },
        "version": Object {
          "raw": "0.1.1",
        },
      },
      Object {
        "_meta": Object {
          "score": 0.040761493,
        },
        "created": Object {
          "raw": "2012-05-08T11:03:10.224Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Park-Miller-Carta pseudo-random number generator library",
        },
        "homepage": Object {
          "raw": "https://github.com/odogono/prng-parkmiller-js/",
        },
        "id": Object {
          "raw": "prng-parkmiller-js",
        },
        "keywords": Object {
          "raw": Array [
            "random",
            "number",
            "generator",
            "park-miller",
            "prng",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-05-08T11:07:48.042Z",
        },
        "name": Object {
          "raw": "prng-parkmiller-js",
        },
        "owners": Object {
          "raw": Array [
            "alex@opendoorgonorth.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "{\\"type\\":\\"git\\",\\"url\\":\\"git://github.com:odogono/prng-parkmiller-js.git\\"}",
          ],
        },
        "version": Object {
          "raw": "0.1.1",
        },
      },
    ],
    "results": Array [
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.17133085,
          },
          "created": Object {
            "raw": "2012-10-09T01:10:48.905Z",
          },
          "dependencies": Object {
            "raw": Array [
              "request",
              "cheerio",
            ],
          },
          "description": Object {
            "raw": "Release some Bulldogs to watch internet for you",
          },
          "id": Object {
            "raw": "bulldog",
          },
          "keywords": Object {
            "raw": Array [
              "bulldog",
              "bulldogjs",
              "watcher",
              "web watcher",
              "site watcher",
            ],
          },
          "license": Object {
            "raw": Array [
              "MIT",
            ],
          },
          "modified": Object {
            "raw": "2012-10-09T01:10:56.277Z",
          },
          "name": Object {
            "raw": "bulldog",
          },
          "owners": Object {
            "raw": Array [
              "social@fernetjs.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "https://github.com/fernetjs/bulldogjs",
            ],
          },
          "version": Object {
            "raw": "0.1.0",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.09943935,
          },
          "created": Object {
            "raw": "2012-02-15T09:48:45.804Z",
          },
          "dependencies": Object {
            "raw": null,
          },
          "description": Object {
            "raw": "synchronize data between logic layer and persistence layer",
          },
          "id": Object {
            "raw": "Squirrel",
          },
          "keywords": Object {
            "raw": null,
          },
          "license": Object {
            "raw": null,
          },
          "modified": Object {
            "raw": "2012-02-15T09:48:53.668Z",
          },
          "name": Object {
            "raw": "Squirrel",
          },
          "owners": Object {
            "raw": Array [
              "dubodog@gmail.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "https://github.com/pomelo-modules/data-sync",
            ],
          },
          "version": Object {
            "raw": "0.0.1",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.082790785,
          },
          "created": Object {
            "raw": "2012-07-27T18:47:51.181Z",
          },
          "dependencies": Object {
            "raw": Array [
              "request",
              "node.extend",
            ],
          },
          "description": Object {
            "raw": "odata client for node.js",
          },
          "id": Object {
            "raw": "odata-cli",
          },
          "keywords": Object {
            "raw": null,
          },
          "license": Object {
            "raw": null,
          },
          "modified": Object {
            "raw": "2012-11-08T16:05:41.225Z",
          },
          "name": Object {
            "raw": "odata-cli",
          },
          "owners": Object {
            "raw": Array [
              "machadogj@gmail.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "https://github.com/machadogj/node-odata-cli",
            ],
          },
          "version": Object {
            "raw": "0.0.4",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.077640004,
          },
          "created": Object {
            "raw": "2013-01-10T20:10:30.401Z",
          },
          "dependencies": Object {
            "raw": null,
          },
          "description": Object {
            "raw": "Winston transport based on mailer. It buffers errors, and packs them in one email if necessary.",
          },
          "id": Object {
            "raw": "winston-mailer",
          },
          "keywords": Object {
            "raw": Array [
              "winston",
              "email",
              "mail",
              "mailer",
            ],
          },
          "license": Object {
            "raw": Array [
              "BSD",
            ],
          },
          "modified": Object {
            "raw": "2013-01-10T20:10:32.828Z",
          },
          "name": Object {
            "raw": "winston-mailer",
          },
          "owners": Object {
            "raw": Array [
              "machadogj@gmail.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "https://github.com/machadogj/node-winston-mailer",
            ],
          },
          "version": Object {
            "raw": "0.0.1",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.077640004,
          },
          "created": Object {
            "raw": "2012-07-31T18:52:42.198Z",
          },
          "dependencies": Object {
            "raw": Array [
              "request",
              "odata-cli",
            ],
          },
          "description": Object {
            "raw": "node.js client for azure acs management service.",
          },
          "id": Object {
            "raw": "acs-cli",
          },
          "keywords": Object {
            "raw": null,
          },
          "license": Object {
            "raw": null,
          },
          "modified": Object {
            "raw": "2012-08-02T13:43:42.049Z",
          },
          "name": Object {
            "raw": "acs-cli",
          },
          "owners": Object {
            "raw": Array [
              "machadogj@gmail.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "{\\"type\\":\\"git\\",\\"url\\":\\"https://bitbucket.org/tellagostudios/node-acs-cli.git\\"}",
            ],
          },
          "version": Object {
            "raw": "0.0.1",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.077640004,
          },
          "created": Object {
            "raw": "2012-10-01T22:18:02.952Z",
          },
          "dependencies": Object {
            "raw": Array [
              "socket.io-client",
            ],
          },
          "description": Object {
            "raw": "Client package for console.io (https://github.com/TellagoDevLabs/node-console.io).",
          },
          "id": Object {
            "raw": "console.io-client",
          },
          "keywords": Object {
            "raw": null,
          },
          "license": Object {
            "raw": null,
          },
          "modified": Object {
            "raw": "2012-10-26T19:29:57.456Z",
          },
          "name": Object {
            "raw": "console.io-client",
          },
          "owners": Object {
            "raw": Array [
              "machadogj@gmail.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "https://github.com/TellagoDevLabs/node-console.io-client",
            ],
          },
          "version": Object {
            "raw": "0.0.4",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.06188738,
          },
          "created": Object {
            "raw": "2011-02-03T01:29:24.057Z",
          },
          "dependencies": Object {
            "raw": Array [
              "cradle",
            ],
          },
          "description": Object {
            "raw": "active record for CouchDB",
          },
          "homepage": Object {
            "raw": "https://github.com/scottburch/couch-ar",
          },
          "id": Object {
            "raw": "couch-ar",
          },
          "keywords": Object {
            "raw": null,
          },
          "license": Object {
            "raw": null,
          },
          "modified": Object {
            "raw": "2012-03-10T20:12:54.478Z",
          },
          "name": Object {
            "raw": "couch-ar",
          },
          "owners": Object {
            "raw": Array [
              "scott@bulldoginfo.com",
            ],
          },
          "repository": Object {
            "raw": null,
          },
          "version": Object {
            "raw": "0.3.4",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.05774788,
          },
          "created": Object {
            "raw": "2012-08-02T20:47:29.279Z",
          },
          "dependencies": Object {
            "raw": Array [
              "watch",
              "mkdirp",
            ],
          },
          "description": Object {
            "raw": "Checkout http://github/gekitz/jalapeno for further details",
          },
          "id": Object {
            "raw": "jalapeno",
          },
          "keywords": Object {
            "raw": Array [
              "jalapeno",
              "watchdog",
              "file copy",
            ],
          },
          "license": Object {
            "raw": null,
          },
          "modified": Object {
            "raw": "2012-08-02T20:47:31.161Z",
          },
          "name": Object {
            "raw": "jalapeno",
          },
          "owners": Object {
            "raw": Array [
              "georgkitz@gmail.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "https://github.com/gekitz/jalapeno",
            ],
          },
          "version": Object {
            "raw": "0.1.1",
          },
        },
      },
      ResultItem {
        "data": Object {
          "_meta": Object {
            "score": 0.040761493,
          },
          "created": Object {
            "raw": "2012-05-08T11:03:10.224Z",
          },
          "dependencies": Object {
            "raw": null,
          },
          "description": Object {
            "raw": "Park-Miller-Carta pseudo-random number generator library",
          },
          "homepage": Object {
            "raw": "https://github.com/odogono/prng-parkmiller-js/",
          },
          "id": Object {
            "raw": "prng-parkmiller-js",
          },
          "keywords": Object {
            "raw": Array [
              "random",
              "number",
              "generator",
              "park-miller",
              "prng",
            ],
          },
          "license": Object {
            "raw": null,
          },
          "modified": Object {
            "raw": "2012-05-08T11:07:48.042Z",
          },
          "name": Object {
            "raw": "prng-parkmiller-js",
          },
          "owners": Object {
            "raw": Array [
              "alex@opendoorgonorth.com",
            ],
          },
          "repository": Object {
            "raw": Array [
              "{\\"type\\":\\"git\\",\\"url\\":\\"git://github.com:odogono/prng-parkmiller-js.git\\"}",
            ],
          },
          "version": Object {
            "raw": "0.1.1",
          },
        },
      },
    ],
  },
]
`;

exports[`Client #querySuggestion should suggest queries 1`] = `
Object {
  "meta": Object {
    "request_id": "0750887ae5330b6c0234b6098f4459e8",
  },
  "results": Object {
    "documents": Array [
      Object {
        "suggestion": "catwalk",
      },
      Object {
        "suggestion": "catcher",
      },
      Object {
        "suggestion": "https://github.com/stuartpb/catcher",
      },
      Object {
        "suggestion": "categories",
      },
      Object {
        "suggestion": "categories for",
      },
      Object {
        "suggestion": "categories for javascript",
      },
      Object {
        "suggestion": "http://lcfrs.org/cats",
      },
      Object {
        "suggestion": "cats",
      },
      Object {
        "suggestion": "https://github.com/luciferous/cats",
      },
      Object {
        "suggestion": "cat4d",
      },
    ],
  },
}
`;

exports[`Client #querySuggestion should suggest with valid options 1`] = `
Object {
  "meta": Object {
    "request_id": "28aa2fbd5ee7e2cbcbb1535c9e85ecfb",
  },
  "results": Object {
    "documents": Array [
      Object {
        "suggestion": "catwalk",
      },
      Object {
        "suggestion": "cats",
      },
      Object {
        "suggestion": "cat4d",
      },
    ],
  },
}
`;

exports[`Client #search should query 1`] = `
ResultList {
  "info": Object {
    "meta": Object {
      "page": Object {
        "current": 1,
        "size": 10,
        "total_pages": 65,
        "total_results": 642,
      },
      "request_id": "8bedbf97e0a9ed0e9335665938502c27",
      "warnings": Array [],
    },
  },
  "rawInfo": Object {
    "meta": Object {
      "page": Object {
        "current": 1,
        "size": 10,
        "total_pages": 65,
        "total_results": 642,
      },
      "request_id": "8bedbf97e0a9ed0e9335665938502c27",
      "warnings": Array [],
    },
  },
  "rawResults": Array [
    Object {
      "_meta": Object {
        "score": 19.10181,
      },
      "created": Object {
        "raw": "2013-01-23T04:51:39.995Z",
      },
      "dependencies": Object {
        "raw": Array [
          "coffee-script",
          "argparse",
          "source-map",
        ],
      },
      "description": Object {
        "raw": "WIP cat for JS source maps.",
      },
      "id": Object {
        "raw": "source-map-cat",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": Array [
          "BSD",
        ],
      },
      "modified": Object {
        "raw": "2013-01-23T04:51:42.782Z",
      },
      "name": Object {
        "raw": "source-map-cat",
      },
      "owners": Object {
        "raw": Array [
          "gregg@aweber.com",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.0.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 18.906376,
      },
      "created": Object {
        "raw": "2012-04-12T06:27:43.515Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "Cat4D Framework Implementation",
      },
      "homepage": Object {
        "raw": "http://www.dumb.cat",
      },
      "id": Object {
        "raw": "Cat4D",
      },
      "keywords": Object {
        "raw": Array [
          "Cat4D",
          "dumb",
          "cat",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2012-04-12T06:39:23.334Z",
      },
      "name": Object {
        "raw": "Cat4D",
      },
      "owners": Object {
        "raw": Array [
          "Cat@Dumb.Cat",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/Cat4D/Cat4D",
        ],
      },
      "version": Object {
        "raw": "0.0.2",
      },
    },
    Object {
      "_meta": Object {
        "score": 17.527254,
      },
      "created": Object {
        "raw": "2013-01-06T13:43:21.012Z",
      },
      "dependencies": Object {
        "raw": Array [
          "rex",
          "cat",
          "htmlparser",
        ],
      },
      "description": Object {
        "raw": "Rex Javascript compiling for root",
      },
      "id": Object {
        "raw": "response.require",
      },
      "keywords": Object {
        "raw": Array [
          "root",
          "rex",
          "require",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2013-01-06T13:43:23.680Z",
      },
      "name": Object {
        "raw": "response.require",
      },
      "owners": Object {
        "raw": Array [
          "mirza.kapetanovic@gmail.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/kapetan/response.require",
        ],
      },
      "version": Object {
        "raw": "0.1.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 15.753918,
      },
      "created": Object {
        "raw": "2012-05-01T21:32:09.544Z",
      },
      "dependencies": Object {
        "raw": Array [
          "common",
          "rex",
          "optimist",
          "cat",
        ],
      },
      "description": Object {
        "raw": "rex-cli is the cli equivivalent of rex",
      },
      "id": Object {
        "raw": "rex-cli",
      },
      "keywords": Object {
        "raw": Array [
          "browser",
          "commonjs",
          "cli",
          "require",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2013-01-02T12:48:38.182Z",
      },
      "name": Object {
        "raw": "rex-cli",
      },
      "owners": Object {
        "raw": Array [
          "mathiasbuus@gmail.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/gett/rex",
        ],
      },
      "version": Object {
        "raw": "0.3.2",
      },
    },
    Object {
      "_meta": Object {
        "score": 12.959391,
      },
      "created": Object {
        "raw": "2012-10-15T23:26:48.468Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "Categories for Javascript",
      },
      "homepage": Object {
        "raw": "http://lcfrs.org/cats",
      },
      "id": Object {
        "raw": "cats",
      },
      "keywords": Object {
        "raw": Array [
          "monad",
          "functor",
          "monoid",
          "async",
        ],
      },
      "license": Object {
        "raw": Array [
          "BSD",
        ],
      },
      "modified": Object {
        "raw": "2012-10-18T16:14:10.680Z",
      },
      "name": Object {
        "raw": "cats",
      },
      "owners": Object {
        "raw": Array [
          "neuman.vong@gmail.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/luciferous/cats",
        ],
      },
      "version": Object {
        "raw": "0.0.2",
      },
    },
    Object {
      "_meta": Object {
        "score": 7.3216166,
      },
      "created": Object {
        "raw": "2013-01-28T16:50:08.471Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "Declarative structural remapping for the web.",
      },
      "homepage": Object {
        "raw": "http://www.treesheets.org",
      },
      "id": Object {
        "raw": "cts",
      },
      "keywords": Object {
        "raw": Array [
          "treesheets",
          "cts",
          "cats",
          "structure",
          "cascading treesheets",
          "tree",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2013-01-28T16:50:09.891Z",
      },
      "name": Object {
        "raw": "cts",
      },
      "owners": Object {
        "raw": Array [
          "eob@csail.mit.edu",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/cts/cts-js",
        ],
      },
      "version": Object {
        "raw": "0.5.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 3.2000966,
      },
      "created": Object {
        "raw": "2011-06-24T15:38:51.745Z",
      },
      "dependencies": Object {
        "raw": Array [
          "jshelpers",
        ],
      },
      "description": Object {
        "raw": "A simple user and role system for Node.js and Redis.",
      },
      "homepage": Object {
        "raw": "https://github.com/CatChen/redis-user",
      },
      "id": Object {
        "raw": "redis-user",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2011-07-20T04:00:12.987Z",
      },
      "name": Object {
        "raw": "redis-user",
      },
      "owners": Object {
        "raw": Array [
          "cathsfz@gmail.com",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.2.4",
      },
    },
    Object {
      "_meta": Object {
        "score": 2.8856053,
      },
      "created": Object {
        "raw": "2011-07-16T16:31:00.287Z",
      },
      "dependencies": Object {
        "raw": Array [
          "jshelpers",
        ],
      },
      "description": Object {
        "raw": "A JavaScript utility to trace the original url of a shortened url.",
      },
      "homepage": Object {
        "raw": "https://github.com/CatChen/traceurl",
      },
      "id": Object {
        "raw": "traceurl",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2011-12-16T16:38:49.255Z",
      },
      "name": Object {
        "raw": "traceurl",
      },
      "owners": Object {
        "raw": Array [
          "cathsfz@gmail.com",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.2.8",
      },
    },
    Object {
      "_meta": Object {
        "score": 0.73055637,
      },
      "created": Object {
        "raw": "2013-01-10T01:48:15.743Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "microscopic Node error helpers",
      },
      "id": Object {
        "raw": "catcher",
      },
      "keywords": Object {
        "raw": Array [
          "error",
          "handling",
        ],
      },
      "license": Object {
        "raw": Array [
          "MIT",
        ],
      },
      "modified": Object {
        "raw": "2013-01-10T01:48:16.381Z",
      },
      "name": Object {
        "raw": "catcher",
      },
      "owners": Object {
        "raw": Array [
          "stuart@testtrack4.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/stuartpb/catcher",
        ],
      },
      "version": Object {
        "raw": "0.1.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 0.7191726,
      },
      "created": Object {
        "raw": "2012-12-20T21:05:36.757Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "models++",
      },
      "id": Object {
        "raw": "catwalk",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2012-12-20T21:05:38.476Z",
      },
      "name": Object {
        "raw": "catwalk",
      },
      "owners": Object {
        "raw": Array [
          "a@so.hn",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.0.1",
      },
    },
  ],
  "results": Array [
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 19.10181,
        },
        "created": Object {
          "raw": "2013-01-23T04:51:39.995Z",
        },
        "dependencies": Object {
          "raw": Array [
            "coffee-script",
            "argparse",
            "source-map",
          ],
        },
        "description": Object {
          "raw": "WIP cat for JS source maps.",
        },
        "id": Object {
          "raw": "source-map-cat",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": Array [
            "BSD",
          ],
        },
        "modified": Object {
          "raw": "2013-01-23T04:51:42.782Z",
        },
        "name": Object {
          "raw": "source-map-cat",
        },
        "owners": Object {
          "raw": Array [
            "gregg@aweber.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.0.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 18.906376,
        },
        "created": Object {
          "raw": "2012-04-12T06:27:43.515Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Cat4D Framework Implementation",
        },
        "homepage": Object {
          "raw": "http://www.dumb.cat",
        },
        "id": Object {
          "raw": "Cat4D",
        },
        "keywords": Object {
          "raw": Array [
            "Cat4D",
            "dumb",
            "cat",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-04-12T06:39:23.334Z",
        },
        "name": Object {
          "raw": "Cat4D",
        },
        "owners": Object {
          "raw": Array [
            "Cat@Dumb.Cat",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/Cat4D/Cat4D",
          ],
        },
        "version": Object {
          "raw": "0.0.2",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 17.527254,
        },
        "created": Object {
          "raw": "2013-01-06T13:43:21.012Z",
        },
        "dependencies": Object {
          "raw": Array [
            "rex",
            "cat",
            "htmlparser",
          ],
        },
        "description": Object {
          "raw": "Rex Javascript compiling for root",
        },
        "id": Object {
          "raw": "response.require",
        },
        "keywords": Object {
          "raw": Array [
            "root",
            "rex",
            "require",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2013-01-06T13:43:23.680Z",
        },
        "name": Object {
          "raw": "response.require",
        },
        "owners": Object {
          "raw": Array [
            "mirza.kapetanovic@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/kapetan/response.require",
          ],
        },
        "version": Object {
          "raw": "0.1.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 15.753918,
        },
        "created": Object {
          "raw": "2012-05-01T21:32:09.544Z",
        },
        "dependencies": Object {
          "raw": Array [
            "common",
            "rex",
            "optimist",
            "cat",
          ],
        },
        "description": Object {
          "raw": "rex-cli is the cli equivivalent of rex",
        },
        "id": Object {
          "raw": "rex-cli",
        },
        "keywords": Object {
          "raw": Array [
            "browser",
            "commonjs",
            "cli",
            "require",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2013-01-02T12:48:38.182Z",
        },
        "name": Object {
          "raw": "rex-cli",
        },
        "owners": Object {
          "raw": Array [
            "mathiasbuus@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/gett/rex",
          ],
        },
        "version": Object {
          "raw": "0.3.2",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 12.959391,
        },
        "created": Object {
          "raw": "2012-10-15T23:26:48.468Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Categories for Javascript",
        },
        "homepage": Object {
          "raw": "http://lcfrs.org/cats",
        },
        "id": Object {
          "raw": "cats",
        },
        "keywords": Object {
          "raw": Array [
            "monad",
            "functor",
            "monoid",
            "async",
          ],
        },
        "license": Object {
          "raw": Array [
            "BSD",
          ],
        },
        "modified": Object {
          "raw": "2012-10-18T16:14:10.680Z",
        },
        "name": Object {
          "raw": "cats",
        },
        "owners": Object {
          "raw": Array [
            "neuman.vong@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/luciferous/cats",
          ],
        },
        "version": Object {
          "raw": "0.0.2",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 7.3216166,
        },
        "created": Object {
          "raw": "2013-01-28T16:50:08.471Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Declarative structural remapping for the web.",
        },
        "homepage": Object {
          "raw": "http://www.treesheets.org",
        },
        "id": Object {
          "raw": "cts",
        },
        "keywords": Object {
          "raw": Array [
            "treesheets",
            "cts",
            "cats",
            "structure",
            "cascading treesheets",
            "tree",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2013-01-28T16:50:09.891Z",
        },
        "name": Object {
          "raw": "cts",
        },
        "owners": Object {
          "raw": Array [
            "eob@csail.mit.edu",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/cts/cts-js",
          ],
        },
        "version": Object {
          "raw": "0.5.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 3.2000966,
        },
        "created": Object {
          "raw": "2011-06-24T15:38:51.745Z",
        },
        "dependencies": Object {
          "raw": Array [
            "jshelpers",
          ],
        },
        "description": Object {
          "raw": "A simple user and role system for Node.js and Redis.",
        },
        "homepage": Object {
          "raw": "https://github.com/CatChen/redis-user",
        },
        "id": Object {
          "raw": "redis-user",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2011-07-20T04:00:12.987Z",
        },
        "name": Object {
          "raw": "redis-user",
        },
        "owners": Object {
          "raw": Array [
            "cathsfz@gmail.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.2.4",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 2.8856053,
        },
        "created": Object {
          "raw": "2011-07-16T16:31:00.287Z",
        },
        "dependencies": Object {
          "raw": Array [
            "jshelpers",
          ],
        },
        "description": Object {
          "raw": "A JavaScript utility to trace the original url of a shortened url.",
        },
        "homepage": Object {
          "raw": "https://github.com/CatChen/traceurl",
        },
        "id": Object {
          "raw": "traceurl",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2011-12-16T16:38:49.255Z",
        },
        "name": Object {
          "raw": "traceurl",
        },
        "owners": Object {
          "raw": Array [
            "cathsfz@gmail.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.2.8",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 0.73055637,
        },
        "created": Object {
          "raw": "2013-01-10T01:48:15.743Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "microscopic Node error helpers",
        },
        "id": Object {
          "raw": "catcher",
        },
        "keywords": Object {
          "raw": Array [
            "error",
            "handling",
          ],
        },
        "license": Object {
          "raw": Array [
            "MIT",
          ],
        },
        "modified": Object {
          "raw": "2013-01-10T01:48:16.381Z",
        },
        "name": Object {
          "raw": "catcher",
        },
        "owners": Object {
          "raw": Array [
            "stuart@testtrack4.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/stuartpb/catcher",
          ],
        },
        "version": Object {
          "raw": "0.1.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 0.7191726,
        },
        "created": Object {
          "raw": "2012-12-20T21:05:36.757Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "models++",
        },
        "id": Object {
          "raw": "catwalk",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-12-20T21:05:38.476Z",
        },
        "name": Object {
          "raw": "catwalk",
        },
        "owners": Object {
          "raw": Array [
            "a@so.hn",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.0.1",
        },
      },
    },
  ],
}
`;

exports[`Client can be instantiated with options 1`] = `
ResultList {
  "info": Object {
    "meta": Object {
      "page": Object {
        "current": 1,
        "size": 10,
        "total_pages": 65,
        "total_results": 642,
      },
      "request_id": "ad345570a3193f91ab91aece286ede1d",
      "warnings": Array [],
    },
  },
  "rawInfo": Object {
    "meta": Object {
      "page": Object {
        "current": 1,
        "size": 10,
        "total_pages": 65,
        "total_results": 642,
      },
      "request_id": "ad345570a3193f91ab91aece286ede1d",
      "warnings": Array [],
    },
  },
  "rawResults": Array [
    Object {
      "_meta": Object {
        "score": 18.773478,
      },
      "created": Object {
        "raw": "2013-01-23T04:51:39.995Z",
      },
      "dependencies": Object {
        "raw": Array [
          "coffee-script",
          "argparse",
          "source-map",
        ],
      },
      "description": Object {
        "raw": "WIP cat for JS source maps.",
      },
      "id": Object {
        "raw": "source-map-cat",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": Array [
          "BSD",
        ],
      },
      "modified": Object {
        "raw": "2013-01-23T04:51:42.782Z",
      },
      "name": Object {
        "raw": "source-map-cat",
      },
      "owners": Object {
        "raw": Array [
          "gregg@aweber.com",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.0.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 18.477566,
      },
      "created": Object {
        "raw": "2012-04-12T06:27:43.515Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "Cat4D Framework Implementation",
      },
      "homepage": Object {
        "raw": "http://www.dumb.cat",
      },
      "id": Object {
        "raw": "Cat4D",
      },
      "keywords": Object {
        "raw": Array [
          "Cat4D",
          "dumb",
          "cat",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2012-04-12T06:39:23.334Z",
      },
      "name": Object {
        "raw": "Cat4D",
      },
      "owners": Object {
        "raw": Array [
          "Cat@Dumb.Cat",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/Cat4D/Cat4D",
        ],
      },
      "version": Object {
        "raw": "0.0.2",
      },
    },
    Object {
      "_meta": Object {
        "score": 17.458853,
      },
      "created": Object {
        "raw": "2013-01-06T13:43:21.012Z",
      },
      "dependencies": Object {
        "raw": Array [
          "rex",
          "cat",
          "htmlparser",
        ],
      },
      "description": Object {
        "raw": "Rex Javascript compiling for root",
      },
      "id": Object {
        "raw": "response.require",
      },
      "keywords": Object {
        "raw": Array [
          "root",
          "rex",
          "require",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2013-01-06T13:43:23.680Z",
      },
      "name": Object {
        "raw": "response.require",
      },
      "owners": Object {
        "raw": Array [
          "mirza.kapetanovic@gmail.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/kapetan/response.require",
        ],
      },
      "version": Object {
        "raw": "0.1.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 15.531057,
      },
      "created": Object {
        "raw": "2012-05-01T21:32:09.544Z",
      },
      "dependencies": Object {
        "raw": Array [
          "common",
          "rex",
          "optimist",
          "cat",
        ],
      },
      "description": Object {
        "raw": "rex-cli is the cli equivivalent of rex",
      },
      "id": Object {
        "raw": "rex-cli",
      },
      "keywords": Object {
        "raw": Array [
          "browser",
          "commonjs",
          "cli",
          "require",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2013-01-02T12:48:38.182Z",
      },
      "name": Object {
        "raw": "rex-cli",
      },
      "owners": Object {
        "raw": Array [
          "mathiasbuus@gmail.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/gett/rex",
        ],
      },
      "version": Object {
        "raw": "0.3.2",
      },
    },
    Object {
      "_meta": Object {
        "score": 12.659987,
      },
      "created": Object {
        "raw": "2012-10-15T23:26:48.468Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "Categories for Javascript",
      },
      "homepage": Object {
        "raw": "http://lcfrs.org/cats",
      },
      "id": Object {
        "raw": "cats",
      },
      "keywords": Object {
        "raw": Array [
          "monad",
          "functor",
          "monoid",
          "async",
        ],
      },
      "license": Object {
        "raw": Array [
          "BSD",
        ],
      },
      "modified": Object {
        "raw": "2012-10-18T16:14:10.680Z",
      },
      "name": Object {
        "raw": "cats",
      },
      "owners": Object {
        "raw": Array [
          "neuman.vong@gmail.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/luciferous/cats",
        ],
      },
      "version": Object {
        "raw": "0.0.2",
      },
    },
    Object {
      "_meta": Object {
        "score": 6.8988786,
      },
      "created": Object {
        "raw": "2013-01-28T16:50:08.471Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "Declarative structural remapping for the web.",
      },
      "homepage": Object {
        "raw": "http://www.treesheets.org",
      },
      "id": Object {
        "raw": "cts",
      },
      "keywords": Object {
        "raw": Array [
          "treesheets",
          "cts",
          "cats",
          "structure",
          "cascading treesheets",
          "tree",
        ],
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2013-01-28T16:50:09.891Z",
      },
      "name": Object {
        "raw": "cts",
      },
      "owners": Object {
        "raw": Array [
          "eob@csail.mit.edu",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/cts/cts-js",
        ],
      },
      "version": Object {
        "raw": "0.5.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 3.1969237,
      },
      "created": Object {
        "raw": "2011-06-24T15:38:51.745Z",
      },
      "dependencies": Object {
        "raw": Array [
          "jshelpers",
        ],
      },
      "description": Object {
        "raw": "A simple user and role system for Node.js and Redis.",
      },
      "homepage": Object {
        "raw": "https://github.com/CatChen/redis-user",
      },
      "id": Object {
        "raw": "redis-user",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2011-07-20T04:00:12.987Z",
      },
      "name": Object {
        "raw": "redis-user",
      },
      "owners": Object {
        "raw": Array [
          "cathsfz@gmail.com",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.2.4",
      },
    },
    Object {
      "_meta": Object {
        "score": 2.837085,
      },
      "created": Object {
        "raw": "2011-07-16T16:31:00.287Z",
      },
      "dependencies": Object {
        "raw": Array [
          "jshelpers",
        ],
      },
      "description": Object {
        "raw": "A JavaScript utility to trace the original url of a shortened url.",
      },
      "homepage": Object {
        "raw": "https://github.com/CatChen/traceurl",
      },
      "id": Object {
        "raw": "traceurl",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2011-12-16T16:38:49.255Z",
      },
      "name": Object {
        "raw": "traceurl",
      },
      "owners": Object {
        "raw": Array [
          "cathsfz@gmail.com",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.2.8",
      },
    },
    Object {
      "_meta": Object {
        "score": 0.7402164,
      },
      "created": Object {
        "raw": "2013-01-10T01:48:15.743Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "microscopic Node error helpers",
      },
      "id": Object {
        "raw": "catcher",
      },
      "keywords": Object {
        "raw": Array [
          "error",
          "handling",
        ],
      },
      "license": Object {
        "raw": Array [
          "MIT",
        ],
      },
      "modified": Object {
        "raw": "2013-01-10T01:48:16.381Z",
      },
      "name": Object {
        "raw": "catcher",
      },
      "owners": Object {
        "raw": Array [
          "stuart@testtrack4.com",
        ],
      },
      "repository": Object {
        "raw": Array [
          "https://github.com/stuartpb/catcher",
        ],
      },
      "version": Object {
        "raw": "0.1.0",
      },
    },
    Object {
      "_meta": Object {
        "score": 0.7177082,
      },
      "created": Object {
        "raw": "2012-12-20T21:05:36.757Z",
      },
      "dependencies": Object {
        "raw": null,
      },
      "description": Object {
        "raw": "models++",
      },
      "id": Object {
        "raw": "catwalk",
      },
      "keywords": Object {
        "raw": null,
      },
      "license": Object {
        "raw": null,
      },
      "modified": Object {
        "raw": "2012-12-20T21:05:38.476Z",
      },
      "name": Object {
        "raw": "catwalk",
      },
      "owners": Object {
        "raw": Array [
          "a@so.hn",
        ],
      },
      "repository": Object {
        "raw": null,
      },
      "version": Object {
        "raw": "0.0.1",
      },
    },
  ],
  "results": Array [
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 18.773478,
        },
        "created": Object {
          "raw": "2013-01-23T04:51:39.995Z",
        },
        "dependencies": Object {
          "raw": Array [
            "coffee-script",
            "argparse",
            "source-map",
          ],
        },
        "description": Object {
          "raw": "WIP cat for JS source maps.",
        },
        "id": Object {
          "raw": "source-map-cat",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": Array [
            "BSD",
          ],
        },
        "modified": Object {
          "raw": "2013-01-23T04:51:42.782Z",
        },
        "name": Object {
          "raw": "source-map-cat",
        },
        "owners": Object {
          "raw": Array [
            "gregg@aweber.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.0.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 18.477566,
        },
        "created": Object {
          "raw": "2012-04-12T06:27:43.515Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Cat4D Framework Implementation",
        },
        "homepage": Object {
          "raw": "http://www.dumb.cat",
        },
        "id": Object {
          "raw": "Cat4D",
        },
        "keywords": Object {
          "raw": Array [
            "Cat4D",
            "dumb",
            "cat",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-04-12T06:39:23.334Z",
        },
        "name": Object {
          "raw": "Cat4D",
        },
        "owners": Object {
          "raw": Array [
            "Cat@Dumb.Cat",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/Cat4D/Cat4D",
          ],
        },
        "version": Object {
          "raw": "0.0.2",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 17.458853,
        },
        "created": Object {
          "raw": "2013-01-06T13:43:21.012Z",
        },
        "dependencies": Object {
          "raw": Array [
            "rex",
            "cat",
            "htmlparser",
          ],
        },
        "description": Object {
          "raw": "Rex Javascript compiling for root",
        },
        "id": Object {
          "raw": "response.require",
        },
        "keywords": Object {
          "raw": Array [
            "root",
            "rex",
            "require",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2013-01-06T13:43:23.680Z",
        },
        "name": Object {
          "raw": "response.require",
        },
        "owners": Object {
          "raw": Array [
            "mirza.kapetanovic@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/kapetan/response.require",
          ],
        },
        "version": Object {
          "raw": "0.1.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 15.531057,
        },
        "created": Object {
          "raw": "2012-05-01T21:32:09.544Z",
        },
        "dependencies": Object {
          "raw": Array [
            "common",
            "rex",
            "optimist",
            "cat",
          ],
        },
        "description": Object {
          "raw": "rex-cli is the cli equivivalent of rex",
        },
        "id": Object {
          "raw": "rex-cli",
        },
        "keywords": Object {
          "raw": Array [
            "browser",
            "commonjs",
            "cli",
            "require",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2013-01-02T12:48:38.182Z",
        },
        "name": Object {
          "raw": "rex-cli",
        },
        "owners": Object {
          "raw": Array [
            "mathiasbuus@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/gett/rex",
          ],
        },
        "version": Object {
          "raw": "0.3.2",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 12.659987,
        },
        "created": Object {
          "raw": "2012-10-15T23:26:48.468Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Categories for Javascript",
        },
        "homepage": Object {
          "raw": "http://lcfrs.org/cats",
        },
        "id": Object {
          "raw": "cats",
        },
        "keywords": Object {
          "raw": Array [
            "monad",
            "functor",
            "monoid",
            "async",
          ],
        },
        "license": Object {
          "raw": Array [
            "BSD",
          ],
        },
        "modified": Object {
          "raw": "2012-10-18T16:14:10.680Z",
        },
        "name": Object {
          "raw": "cats",
        },
        "owners": Object {
          "raw": Array [
            "neuman.vong@gmail.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/luciferous/cats",
          ],
        },
        "version": Object {
          "raw": "0.0.2",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 6.8988786,
        },
        "created": Object {
          "raw": "2013-01-28T16:50:08.471Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "Declarative structural remapping for the web.",
        },
        "homepage": Object {
          "raw": "http://www.treesheets.org",
        },
        "id": Object {
          "raw": "cts",
        },
        "keywords": Object {
          "raw": Array [
            "treesheets",
            "cts",
            "cats",
            "structure",
            "cascading treesheets",
            "tree",
          ],
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2013-01-28T16:50:09.891Z",
        },
        "name": Object {
          "raw": "cts",
        },
        "owners": Object {
          "raw": Array [
            "eob@csail.mit.edu",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/cts/cts-js",
          ],
        },
        "version": Object {
          "raw": "0.5.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 3.1969237,
        },
        "created": Object {
          "raw": "2011-06-24T15:38:51.745Z",
        },
        "dependencies": Object {
          "raw": Array [
            "jshelpers",
          ],
        },
        "description": Object {
          "raw": "A simple user and role system for Node.js and Redis.",
        },
        "homepage": Object {
          "raw": "https://github.com/CatChen/redis-user",
        },
        "id": Object {
          "raw": "redis-user",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2011-07-20T04:00:12.987Z",
        },
        "name": Object {
          "raw": "redis-user",
        },
        "owners": Object {
          "raw": Array [
            "cathsfz@gmail.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.2.4",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 2.837085,
        },
        "created": Object {
          "raw": "2011-07-16T16:31:00.287Z",
        },
        "dependencies": Object {
          "raw": Array [
            "jshelpers",
          ],
        },
        "description": Object {
          "raw": "A JavaScript utility to trace the original url of a shortened url.",
        },
        "homepage": Object {
          "raw": "https://github.com/CatChen/traceurl",
        },
        "id": Object {
          "raw": "traceurl",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2011-12-16T16:38:49.255Z",
        },
        "name": Object {
          "raw": "traceurl",
        },
        "owners": Object {
          "raw": Array [
            "cathsfz@gmail.com",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.2.8",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 0.7402164,
        },
        "created": Object {
          "raw": "2013-01-10T01:48:15.743Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "microscopic Node error helpers",
        },
        "id": Object {
          "raw": "catcher",
        },
        "keywords": Object {
          "raw": Array [
            "error",
            "handling",
          ],
        },
        "license": Object {
          "raw": Array [
            "MIT",
          ],
        },
        "modified": Object {
          "raw": "2013-01-10T01:48:16.381Z",
        },
        "name": Object {
          "raw": "catcher",
        },
        "owners": Object {
          "raw": Array [
            "stuart@testtrack4.com",
          ],
        },
        "repository": Object {
          "raw": Array [
            "https://github.com/stuartpb/catcher",
          ],
        },
        "version": Object {
          "raw": "0.1.0",
        },
      },
    },
    ResultItem {
      "data": Object {
        "_meta": Object {
          "score": 0.7177082,
        },
        "created": Object {
          "raw": "2012-12-20T21:05:36.757Z",
        },
        "dependencies": Object {
          "raw": null,
        },
        "description": Object {
          "raw": "models++",
        },
        "id": Object {
          "raw": "catwalk",
        },
        "keywords": Object {
          "raw": null,
        },
        "license": Object {
          "raw": null,
        },
        "modified": Object {
          "raw": "2012-12-20T21:05:38.476Z",
        },
        "name": Object {
          "raw": "catwalk",
        },
        "owners": Object {
          "raw": Array [
            "a@so.hn",
          ],
        },
        "repository": Object {
          "raw": null,
        },
        "version": Object {
          "raw": "0.0.1",
        },
      },
    },
  ],
}
`;
